  * Fixed several bugs and compiler errors
2022-09-04      v2.33.15 olikraus@gmail.com
  * ST7567 ERC13232 (issue 1869)
  * Bugfix for ST7567: (re-)added I2C and 3-wire-SPI (issue 1939)
  * ST7920 160x32 (issue 1873)
  * ST7586 JLX384160 (issue 1932)
  * LC7981 128X128, NOT TESTED (issue 1913)
  * SSD1316 96x32 (issue 1938, not tested, moved to 2.34.x)
  * GP1287AI 256X50, GP1247AI 253X63 contributed (issue 1907)
  * Added support for IST3088 (issue 1887) 
  * Double size font functions: drawGlyphX2, drawStrX2, drawUTF8X2 (issue 1919)
  * Experimental support for ST75160, TESTING REQUIRED (issue 1642)
  * Bugfix font compression: Reduced fontsize by up to 4% (issue 1941)
  * Changed SPI mode for SH1106 from 3 to 0 (issue 1901)
2023-06-18      v2.34.21 olikraus@gmail.com
  * SSD1327 ZJY M150 128x128 (issue 1960)
  * SSD1316 96x32 (issue 1938)
  * SSD1322 240x128 (issue 2092)
  * SH1108 128x160 (issue 1998)
  * SSD1306 96x39 (issue 1959)
  * S1D15300 128x64, flip mode 1 not supported, (issue 2063)
  * SSD1362 256x64 (issue 1322, issue 2051)
  * ST75256 JLX160x80 (NOT TESTED, issue 2058)
  * UC1638 240x128 (issue 2075)
  * SED1330 320x200 (issue 1086)
  * Bugfix: Clear font_height_mode during setup to ensure correct default values in 
     cases where the u8g2 struct / class is created via dynamic memory allocation (issue 2046)
  * Bugfix: Fix line draw procedure in 16 bit mode (issue 2053)
  * Added Spleen Monospaced Font from https://github.com/fcambus/spleen (issue 2015)
  * Extended the "E" font range with subscript characters if available in the original font (issue 2079)
  * Bugfix for ESP32 HW SPI Pin Remapping (issue 377, PR 2123)
  * Bugfix for LoadFromSD examle (issue 2179)
  * Changed MUI_LABEL to support UTF8 (issue 2196)
  * Compiler Warning Cleanup for polygon draw (issue 1999, PR 2101)
  * Added MUI fixed width bar graph (issue 2200)
  * Added 04b fonts from u8glib (issue 2157)
  * Added "font_tiny5" (issue 2185)
  