@@ -2,6 +2,7 @@
 
   MUIInput3BtnBounce2.ino
 
+  MUI: https://github.com/olikraus/u8g2/wiki/muimanual
   U8g2 Menu with Bounce2 Library (https://github.com/thomasfredericks/Bounce2).
   
   Universal 8bit Graphics Library (https://github.com/olikraus/u8g2/)
