@@ -2,6 +2,7 @@
 
   MUIInputSimpleRotary.ino
 
+  MUI: https://github.com/olikraus/u8g2/wiki/muimanual
   U8g2 Menu with Rotary Encoder (SimpleRotary library).
   
   Universal 8bit Graphics Library (https://github.com/olikraus/u8g2/)
